[tool.poetry]
name = "code-bleu"
version = "0.1.0"
description = "Package for CodeBLEU calculations."
authors = ["Alena Pestova <alpestova1818@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "code_bleu"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
tree-sitter = "0.23.2"
tree-sitter-go = "^0.23.0"
tree-sitter-java = "^0.23.0"
tree-sitter-python = "^0.23.0"
tree-sitter-javascript = "^0.23.0"
tree-sitter-c-sharp = "^0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
